# CSCE-489-Project

./: .gitignore  README.md  env_setup.md
infini-gram/: .gitignore  README.md
infini-gram/api/: api_config_ai2.json  api_server.py  api_server_creativity.py  environment.yml
infini-gram/docs/: CNAME  _config.yml  api_doc.md  code.md  demo.md  discord.md  docs.md  (+3 more)
infini-gram/pkg/: .gitignore  Cargo.toml  README.md  compile_engine.slurm  environment.yml  indexing_notes.md  pyproject.toml  setup.py  test_indicies.17245812  test_indicies.py  test_indicies.slurm
infini-gram/pkg/infini_gram/: .gitignore  cpp_engine.cpp  cpp_engine.h  engine.py  indexing.py  indexing_reverse_train.slurm  indexing_reversed_train-validate.slurm  indexing_train-validate.slurm  indexing_train.slurm  indexing_v6.py  models.py
infini-gram/pkg/infini_gram/logs/: indexing_reversed_train-validate.17255338  indexing_train-validate.17255245
infini-gram/pkg/src/: main.rs  table_u16.rs  table_u32.rs  table_u8.rs
infini-gram/pkg/test/: cpp_engine_test.cpp  engine_test.py
main/: bidir_bounded_gram.py  bidir_infini_gram.py  eval_bidir_bounded_gram.py  eval_bidir_bounded_gram.slurm  eval_hybrid.py  eval_hybrid.slurm  hybrid_model.py  hyperparam_tunining.slurm  val_bidir_bounded_gram.py  val_bidir_bounded_gram.slurm  val_hybrid.py  val_hybrid.slurm
nucleotide-transformer/: .gitignore  download_nt.sh  eval_nt_metrics.17214148.out  eval_nt_metrics.py  eval_nt_metrics.seff  eval_nt_metrics.slurm  nt-500m-hf_test_metrics_central.npz  nt-500m-hf_test_metrics_random.npz
reports/: proposal.tex
(+105 files in other folders)
